--- a/frodo/package.json
+++ b/frodo/package.json
@@ -3,9 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "build": "webpack"
+  },
   "dependencies": {
     "lodash": "^4.17.21",
     "ramda": "^0.28.0"
   },
-  "type": "module"
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
