--- a/frodo/package.json
+++ b/frodo/package.json
@@ -5,13 +5,22 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
+    "@types/jest": "^29.2.2",
+    "jest": "^29.2.2",
     "lodash": "^4.17.21",
-    "ramda": "^0.28.0"
+    "ramda": "^0.28.0",
+    "rxjs": "^7.5.7",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.2.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
